--- a/src/pages/components/header.css
+++ b/src/pages/components/header.css
@@ -6,18 +6,25 @@
   position: relative;
   /* top: -150px; */
   transition: .6s cubic-bezier(.18,.89,.32,1.28);
+  display: flex;
+  align-items: center;
 }
 
 .header .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 50%;
+  min-height: 80px;
   padding: 0 2.5rem;
   position: absolute;
   top: 0;
   width: 100%;
   position: relative;
+  background: linear-gradient(90deg, rgba(4, 62, 162, 0) 0.86%, rgba(30, 30, 30, .2) 50%, rgba(4, 62, 162, 0) 100.22%);
+  opacity: 0;
+  visibility: hidden;
+  transition: .5s;
 }
 
 .header .navbar li a {
@@ -50,6 +57,14 @@
   cursor: pointer;
 }
 
+/* Btn Avaliacao */
+.btnAvaliacao {
+  width: 115px;
+  position: absolute;
+  right: 60px;
+  bottom: 4px;
+}
+
 /* Animacao */
 .logoToggle {
   top: 35px;
@@ -61,4 +76,10 @@
 .open {
   /* top: 0; */
   height: 200px;
+}
+
+.navbarShow {
+  opacity: 1!important;
+  visibility: visible!important;
+  transition: .5s;
 }
