--- a/src/pages/components/header.css
+++ b/src/pages/components/header.css
@@ -8,6 +8,7 @@
   transition: .6s cubic-bezier(.18,.89,.32,1.28);
   display: flex;
   align-items: center;
+  box-shadow: 0px 4px 60px 43px rgba(14, 22, 48, 0.2);
 }
 
 .header .navbar {
@@ -35,7 +36,7 @@
 /* Logos config */
 .logo-expo, .logo-prefeitura {
   position: fixed;
-  top: 20px;
+  top: 30px;
 }
 
 .logo-expo {
@@ -44,13 +45,20 @@
 
 .logo-prefeitura {
   right: 40px;
-  top: 20px;
+  width: 200px;
+  top: 0px;
   opacity: 0;
   visibility: hidden;
   transition: .2s;
 }
 
 /* Btn Navbar */
+.btn-navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .btn-navbar svg{ 
   width: 100%;
   margin-top: -30px;
@@ -65,9 +73,15 @@
   bottom: 4px;
 }
 
+.iconArrowDown {
+  width: 25px;
+  position: absolute;
+  transition: .4s;
+}
+
 /* Animacao */
 .logoToggle {
-  top: 35px;
+  top: 45px;
   opacity: 1;
   visibility: visible;
   transition: .5s;
@@ -82,4 +96,11 @@
   opacity: 1!important;
   visibility: visible!important;
   transition: .5s;
+}
+
+.iconArrowUp {
+  width: 25px;
+  position: absolute;
+  transform: rotate(180deg);
+  transition: .4s;
 }
