--- a/public/style.css
+++ b/public/style.css
@@ -5,9 +5,9 @@
 }
 
 html {
-  --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+  --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Poppins', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-title: Georgia, 'Times New Roman', Times, serif;
+  --font-title: 'Bitter', serif;
   --font-size: 1.2rem;
   --color: #19f;
   --color-light: #adf;
