--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -9,6 +9,8 @@
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 60px 43px rgba(14, 22, 48, 0.2);
+  position: relative;
+  z-index: 2;
 }
 
 .header .navbar {
@@ -57,6 +59,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 1;
 }
 
 .btn-navbar svg{ 
