--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -4,12 +4,32 @@
   display: grid;
   grid-template-rows: 40px 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 12px;
+  padding: 1rem;
+  border: solid 3px rgba(194, 212, 226, .2);
+  border-radius: 10px;
 }
 
 .icon {
   border: solid 1px green;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.icon img {
+  width: 100%;
+}
+
+.icon p {
+  font-size: 1.3rem;
 }
 
 .titleCardContainer{
@@ -24,5 +44,6 @@
 
 .titleCardContainer h3 {
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 1.rem;
+  font-weight: 600;
 }
