--- a/src/pages/Avaliacao/avaliacao.css
+++ b/src/pages/Avaliacao/avaliacao.css
@@ -26,7 +26,7 @@
 header {
   width: 100%;
   position: relative;
-  /* border: solid 3px green; */
+  border: solid 3px green;
 }
 
 .btnEnviarAvaliacao {
@@ -56,7 +56,7 @@ section {
   align-items: center;
   padding-bottom: 2rem;
   padding-top: 1rem;
-  /* border: solid 3px red; */
+  border: solid 3px red;
 }
 
 /* Cards Config */
@@ -79,6 +79,6 @@ section .cardsAvaliacao {
 }
 
 footer { 
-  /* border: solid 3px orange; */
+  border: solid 3px orange;
   width: 100%;
 }
