--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -5,13 +5,13 @@
   grid-template-rows: 40px 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 12px;
-  padding: 1rem;
+  padding: 1.5rem;
   border: solid 3px rgba(194, 212, 226, .2);
   border-radius: 10px;
 }
 
 .icon {
-  border: solid 1px green;
+  /* border: solid 1px green; */
   width: 100%;
   height: 100%;
   display: flex;
@@ -33,7 +33,7 @@
 }
 
 .titleCardContainer{
-  border: solid 1px red;
+  /* border: solid 1px red; */
   padding: 0;
   margin: 0;
   grid-column: 1/6;
