--- a/src/pages/Avaliacao/avaliacao.css
+++ b/src/pages/Avaliacao/avaliacao.css
@@ -26,15 +26,17 @@
 header {
   width: 100%;
   position: relative;
-  border: solid 3px green;
+  /* border: solid 3px green; */
 }
 
 .btnEnviarAvaliacao {
-  background: #52BD5D;
-  width: 400px;
-  height: 70px;
+  background: #3B9C45;
+  width: 450px;
+  height: 100px;
   color: white;
-
+  font-size: 1.8rem;
+  font-weight: 500;
+  border-radius: 10px;
 }
 
 .scLogos {
@@ -45,7 +47,7 @@ header {
   width: 75px;
   position: absolute;
   right: 160px;
-  top: 40px;
+  top: 60px;
   opacity: .5;
   cursor: pointer;
 }
@@ -56,7 +58,7 @@ section {
   align-items: center;
   padding-bottom: 2rem;
   padding-top: 1rem;
-  border: solid 3px red;
+  /* border: solid 3px red; */
 }
 
 /* Cards Config */
@@ -67,8 +69,7 @@ section .cardsAvaliacao {
   width: 100%;
   height: 100%;
   gap: 10px;
-  padding: 20px 10rem;
-  /* background-color: red; */
+  padding: 20px 7rem;
 }
 
 .card {
@@ -79,6 +80,6 @@ section .cardsAvaliacao {
 }
 
 footer { 
-  border: solid 3px orange;
+  /* border: solid 3px orange; */
   width: 100%;
 }
