--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -2,10 +2,10 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: 40px 1fr;
+  grid-template-rows: 35px 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 12px;
-  padding: 1.5rem;
+  padding: 1rem 1.5rem;
   border: solid 3px rgba(194, 212, 226, .2);
   border-radius: 10px;
 }
@@ -29,7 +29,7 @@
 }
 
 .icon p {
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .titleCardContainer{
