--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -22,7 +22,7 @@
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
-  opacity: .7;
+  opacity: .5;
 }
 
 .icon img {
@@ -47,7 +47,8 @@
 .titleCardContainer h3 {
   font-weight: 500;
   font-size: 1.rem;
-  font-weight: 600;
+  font-weight: 400;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /********** Botoes Carinhas ativos  ***********/
@@ -71,6 +72,11 @@
   transition: .3s ease-out;
 }
 
+.borderMuitoRuim {
+  border: solid 3px rgba(253, 86, 85, .4);
+  transition: .3s ease-out;
+}
+
 /* Ruim Config */
 .ruimShow {
   opacity: 1;
@@ -86,6 +92,11 @@
 .TextRuimActive {
   color:#FC9A29;
   font-weight: bold;
+  transition: .3s ease-out;
+}
+
+.borderRuim {
+  border: solid 3px rgba(253, 165, 44, .4);
   transition: .3s ease-out;
 }
 
@@ -107,6 +118,11 @@
   transition: .3s ease-out;
 }
 
+.borderRazoavel {
+  border: solid 3px rgba(255, 223, 84, .4);
+  transition: .3s ease-out;
+}
+
 /* Bom Config */
 .bomShow {
   opacity: 1;
@@ -125,6 +141,11 @@
   transition: .3s ease-out;
 }
 
+.borderBom {
+  border: solid 3px rgba(86, 233, 72, .4);
+  transition: .3s ease-out;
+}
+
 /* Muito Bom Config */
 .muitoBomShow {
   opacity: 1;
@@ -140,5 +161,9 @@
 .TextMuitoBomActive {
   color:#43BC27;
   font-weight: bold;
+  transition: .3s ease-out;
+}
+.borderMuitoBom {
+  border: solid 3px rgba(75, 196, 38, .4);
   transition: .3s ease-out;
 }
