--- a/src/components/Mapa/mapa.css
+++ b/src/components/Mapa/mapa.css
@@ -1,13 +1,6 @@
-.mapaExpo {
-  width: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
-  opacity: .3;
-}
-
-.map-container {
-  width: 100%;
-  height: 100vh;
+.leaflet-image-layer {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto !important;
+  height: auto !important;
 }
