--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -18,30 +18,26 @@ body {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 80vw;
-  height: 80vh;
-  background-color: black;
+  width: 75vw;
+  height: 75vh;
+  background-color: #253242;
   border-radius: 0;
-  opacity: .9;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-}
-
-.leaflet-popup-content {
-  width: 100%;
-  height: 100%;
-  position: relative;
-
-}
-
-.leaflet-popup-wrapper {
-  position: relative;
-  /* Outras propriedades CSS */
+  background: rgba( 37, 50, 66, .83 );
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.7 );
+  backdrop-filter: blur( 13.5px );
+  -webkit-backdrop-filter: blur( 13.5px );
+  border-radius: 10px;
+  border: 3px solid rgba(162, 191, 218, 0.233);
+  -moz-box-shadow: -1px 39px 55px 0px rgba(37,50,66,1);
+  box-shadow: -1px 39px 55px 0px rgba(37,50,66,.5);
 }
 
 .leaflet-popup-close-button {
+  display: none!important;
   background-color: red !important;
   top: 0 !important;
   right: 0 !important;
@@ -49,4 +45,112 @@ body {
 
 .leaflet-popup-tip-container {
   display: none;
+}
+
+/* CONFIG POPUP CONTEUDO */
+
+.leaflet-popup-content {
+  width: 100%!important;
+  height: 100% !important;
+  position: relative;
+  /* border: solid 1px red; */
+  margin: 0!important;
+}
+
+.leaflet-popup-content main {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  padding-bottom: 5px;
+}
+
+.leaflet-popup-content header {
+  display: flex;
+  /* border: solid 1px green; */
+  width: 100%;
+  height: 75%;
+  position: relative;
+}
+
+.leaflet-popup-content main header .img-container {
+  width: 50%;
+  /* border: solid 1px violet; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.leaflet-popup-content main header .containerIntro {
+  width: 50%;
+  /* border: solid 1px rgb(255, 157, 0); */
+  padding: 3rem 1rem;
+  font-family: Poppins;
+}
+
+.leaflet-popup-content main header .containerIntro h1 {
+  font-size: 4.3rem;
+  font-weight: 400;
+}
+
+.leaflet-popup-content main header .containerIntro p {
+  font-size: 1.5rem;
+  width: 80%;
+  font-weight: 300;
+  color: #AAB7BF;
+}
+
+/* NAV CONFIG */
+
+.leaflet-popup-content main footer {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 35%;
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  background: linear-gradient(90deg, rgba(37,50,66,0) 0%, rgba(37,50,66,0.5) 25%, rgba(37,50,66,1) 50%, rgba(37,50,66,0.5) 75%, rgba(37,50,66,0) 100%);
+  z-index: 20;
+  padding-top: 30px;
+}
+
+.leaflet-popup-content main footer nav{ 
+  position: relative;
+}
+
+.leaflet-popup-content main footer h3 {
+  text-transform: uppercase;
+  font-family: Poppins;
+  font-weight: 600;
+  letter-spacing: 2px;
+  color: #a9b1b8;
+  margin-left: 65px;
+  z-index: 2000;
+  position: fixed;
+  margin-top: -20px;
+}
+
+.leaflet-popup-content main footer .navAtracoes {
+  display: flex;
+  height: 100%;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.leaflet-popup-content main footer .navAtracoes li {
+  /* border: solid 1px yellowgreen; */
+  width: 150px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid 1px #777;
+  border-radius: 15px;
 }
