--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -72,7 +72,7 @@ body {
   display: flex;
   /* border: solid 1px green; */
   width: 100%;
-  height: 75%;
+  height: 65%;
   position: relative;
 }
 
@@ -110,13 +110,15 @@ body {
   display: flex;
   justify-content: start;
   align-items: center;
-  height: 35%;
+  height: 40%;
   width: 100%;
-  overflow-x: scroll;
-  overflow-y: hidden;
   background: linear-gradient(90deg, rgba(37,50,66,0) 0%, rgba(37,50,66,0.5) 25%, rgba(37,50,66,1) 50%, rgba(37,50,66,0.5) 75%, rgba(37,50,66,0) 100%);
   z-index: 20;
   padding-top: 30px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  cursor: move;
+
 }
 
 .leaflet-popup-content main footer nav{ 
@@ -132,7 +134,7 @@ body {
   margin-left: 65px;
   z-index: 2000;
   position: fixed;
-  margin-top: -20px;
+  margin-top: -100px;
 }
 
 .leaflet-popup-content main footer .navAtracoes {
@@ -141,13 +143,13 @@ body {
   justify-content: start;
   align-items: center;
   gap: 10px;
-  margin-top: 20px;
+  position: absolute;
 }
 
 .leaflet-popup-content main footer .navAtracoes li {
   /* border: solid 1px yellowgreen; */
   width: 150px;
-  height: 150px;
+  height: 130px;
   display: flex;
   justify-content: center;
   align-items: center;
