--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,11 +1,13 @@
 /* HEADER */
 .header {
-  background: radial-gradient(59.36% 3107.35% at 49.08% -51.8%, #215CB1 0%, #1A4277 49.5%, #142473 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+  background: radial-gradient(59.36% 3107.35% at 49.08% -51.8%, #215CB1 0%, #1A4277 49.5%, #142473 100%)
+    /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+  ;
   width: 100vw;
   height: 20px;
   position: relative;
   /* top: -150px; */
-  transition: .6s cubic-bezier(.18,.89,.32,1.28);
+  transition: .6s cubic-bezier(.18, .89, .32, 1.28);
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 60px 43px rgba(14, 22, 48, 0.2);
@@ -27,7 +29,7 @@
   opacity: 0;
   visibility: hidden;
   transition: .5s;
-  
+
 }
 
 .header .navbar li a {
@@ -37,7 +39,8 @@
 }
 
 /* Logos config */
-.logo-expo, .logo-prefeitura {
+.logo-expo,
+.logo-prefeitura {
   position: fixed;
   top: 30px;
 }
@@ -97,8 +100,8 @@
 }
 
 .navbarShow {
-  opacity: 1!important;
-  visibility: visible!important;
+  opacity: 1 !important;
+  visibility: visible !important;
   transition: .5s;
 }
 
