--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -7,11 +7,24 @@
   height: 20px;
   position: relative;
   /* top: -150px; */
-  transition: .6s cubic-bezier(.18, .89, .32, 1.28);
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 60px 43px rgba(14, 22, 48, 0.2);
   z-index: 2;
+}
+
+header .tourVirtual {
+  position: absolute;
+  font-size: .8rem;
+  z-index: 9999;
+  text-transform: uppercase;
+  left: 50%;
+  top: 10%;
+  transform: translate(-50%, -50%);
+  letter-spacing: 6px;
+  color: white;
+  opacity: .3;
 }
 
 .header .navbar {
@@ -29,7 +42,6 @@
   opacity: 0;
   visibility: hidden;
   transition: .5s;
-
 }
 
 .header .navbar li a {
@@ -67,8 +79,14 @@
   z-index: 1;
   cursor: pointer;
   margin-top: -20px;
+  /* background-color: red; */
+  width: 200px;
+  width: 100%;
 }
 
+.btn-navbar img {
+  width: 100%;
+}
 
 /* Btn Avaliacao */
 .btnAvaliacao {
@@ -79,11 +97,12 @@
 }
 
 .iconArrowDown {
-  width: 27px;
+  width: 22px !important;
   position: absolute;
-  top: 65px;
+  top: 55px;
   transition: .4s;
   cursor: pointer;
+  opacity: .5;
 }
 
 /* Animacao */
