--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,15 @@
 /* HEADER */
+.headerMain {
+  height: 20%;
+  background: linear-gradient(rgba(0, 0, 0, .7) 10%, rgba(4, 62, 162, 0) 100%);
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
+}
+
+.headerMainBGShow {
+  height: 100%;
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
+}
+
 .header {
   background: radial-gradient(59.36% 3107.35% at 49.08% -51.8%, #215CB1 0%, #1A4277 49.5%, #142473 100%)
     /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
@@ -20,11 +31,17 @@ header .tourVirtual {
   z-index: 9999;
   text-transform: uppercase;
   left: 50%;
-  top: 10%;
+  top: 5.5%;
   transform: translate(-50%, -50%);
   letter-spacing: 6px;
   color: white;
   opacity: .3;
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
+}
+
+.tourVirtualPDelay {
+  top: 3% !important;
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
 }
 
 .header .navbar {
@@ -99,10 +116,10 @@ header .tourVirtual {
 .iconArrowDown {
   width: 22px !important;
   position: absolute;
-  top: 55px;
+  top: 50px;
   transition: .4s;
   cursor: pointer;
-  opacity: .5;
+  opacity: .7;
 }
 
 /* Animacao */
