--- a/src/pages/Avaliacao/avaliacao.css
+++ b/src/pages/Avaliacao/avaliacao.css
@@ -1,4 +1,5 @@
 .avaliacao-container {
+  height: auto;
   max-height: 100vh;
   width: 100%;
   display: grid;
@@ -67,7 +68,7 @@ section .cardsAvaliacao {
   width: 100%;
   height: 100%;
   gap: 10px;
-  padding: 20px 7rem;
+  padding: 20px 5rem;
 }
 
 .card {
