--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -7,9 +7,24 @@
 }
 
 .headerMain {
-  position: fixed!important;
+  position: fixed !important;
   z-index: 1000;
 }
+
+.sombra {
+  height: 10vh;
+  width: 100vw;
+  position: absolute;
+  background: linear-gradient(rgba(0, 0, 0, .5) 10%, rgba(4, 62, 162, 0) 100%);
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
+  z-index: 999 !important;
+  pointer-events: none;
+}
+
+.sombraShow {
+  height: 100%;
+  transition: .6s cubic-bezier(.08, .82, .17, 1);
+} */
 
 ::-webkit-scrollbar {
   width: 0px;
