melhoria pin responsivo

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -24,8 +24,81 @@
 .sombraShow {
   height: 100%;
   transition: .6s cubic-bezier(.08, .82, .17, 1);
-} */
+}
 
-::-webkit-scrollbar {
+*/::-webkit-scrollbar {
   width: 0px;
+}
+
+/* Estilos para telas com largura máxima de 480px */
+@media (max-width: 480px) {
+  body {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  h1 {
+    font-size: 2rem !important;
+    /* border: solid 2px red; */
+  }
+
+  .btnHomePrgramacao {
+    width: 45px;
+    height: 45px;
+    top: 6px;
+    left: 6px;
+    background: #142432;
+  }
+
+  .leaflet-popup-content-wrapper {
+    width: 80vw;
+    min-height: 550px;
+    height: 70vh;
+    margin-left: 20px;
+    margin-top: 200px;
+  }
+
+  .leaflet-popup-content main {
+    padding: 0;
+  }
+
+  .leaflet-popup-content header {
+    display: flex;
+    flex-direction: column;
+    /* border: solid 1px green; */
+    width: 100%;
+    height: 70%;
+    position: relative;
+    text-align: center;
+  }
+
+  .leaflet-popup-content main header .img-container {
+    width: 100%;
+  }
+
+  .leaflet-popup-content main header .containerIntro {
+    width: 100%;
+    padding: 0;
+  }
+
+  .leaflet-popup-content main header .containerIntro p {
+    font-size: 16px;
+    width: 100%;
+    padding: 0 35px;
+  }
+
+  .leaflet-popup-content main footer {
+    height: 30%;
+  }
+
+}
+
+/* Estilos para telas com largura mínima de 768px */
+@media (min-width: 768px) {
+  body {
+    font-size: 18px;
+  }
+
+  /* Mais estilos específicos para telas maiores */
+  /* ... */
 }
