--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -79,6 +79,10 @@ body {
 }
 
 .leaflet-popup-content main header .img-container {
+  height: 50%;
+}
+
+.leaflet-popup-content main header .img-container {
   width: 50%;
   /* border: solid 1px violet; */
   display: flex;
