--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -56,6 +56,7 @@
     height: 70vh;
     margin-left: 20px;
     margin-top: 200px;
+    pointer-events: none;
   }
 
   .leaflet-popup-content main {
@@ -93,6 +94,7 @@
 
   .leaflet-popup-content main footer nav ul {
     margin-left: -30px;
+    pointer-events: auto;
   }
 
 }
