--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -19,6 +19,8 @@ body {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 75vw;
+  max-width: 1000px;
+  max-height: 573px;
   height: 75vh;
   background-color: #253242;
   border-radius: 0;
@@ -141,7 +143,7 @@ body {
   font-size: .9rem;
   letter-spacing: 2px;
   color: #a9b1b8;
-  margin-left: 65px;
+  margin-left: 25px;
   z-index: 2000;
   position: fixed;
   margin-top: -93px;
@@ -154,6 +156,7 @@ body {
   align-items: center;
   gap: 10px;
   position: absolute;
+  margin-left: -30px;
 }
 
 .leaflet-popup-content main footer .navAtracoes li {
