--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -124,7 +124,7 @@ body {
   background: linear-gradient(90deg, rgba(37, 50, 66, 0) 0%, rgba(37, 50, 66, 0.5) 25%, rgba(37, 50, 66, 1) 50%, rgba(37, 50, 66, 0.5) 75%, rgba(37, 50, 66, 0) 100%);
   z-index: 20;
   padding-top: 30px;
-  overflow-x: scroll;
+  overflow-x: scroll!important;
   overflow-y: hidden;
 }
 
@@ -280,7 +280,7 @@ img.leaflet-marker-icon.leaflet-zoom-animated.leaflet-interactive {
 
   .leaflet-popup-content main footer {
     height: 36%;
-    overflow-x: scroll;
+    overflow-x: scroll!important;
   }
 
   .leaflet-popup-content main footer nav ul {
