--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -36,13 +36,29 @@ body {
   border: 3px solid rgba(162, 191, 218, 0.233);
   -moz-box-shadow: -1px 39px 55px 0px rgba(37, 50, 66, 1);
   box-shadow: -1px 39px 55px 0px rgba(37, 50, 66, .5);
-  margin-left: 400px;
-  margin-top: 220px;
+}
+
+
+/* POSICIONAMENTO DO POPUP */
+.positionPopupPalcoLaia {
+  margin-top: 200px;
+  background-color: blue !important;
+}
+
+/* .leaflet-popup-content-wrapper .leaflet-popup-tip-container main header .img-container > img[src="palco-laia.png"] */
+
+.leaflet-popup-content-wrapper:nth-child(2){
+  width: 80vw;
+  min-height: 550px;
+  height: 70vh;
+  margin-left: 20px;
+  margin-top: 200px;
+  pointer-events: none;
+  background-color: red;
 }
 
 .leaflet-popup-close-button {
   display: none !important;
-  background-color: red !important;
   top: 0 !important;
   right: 0 !important;
 }
@@ -124,7 +140,7 @@ body {
   background: linear-gradient(90deg, rgba(37, 50, 66, 0) 0%, rgba(37, 50, 66, 0.5) 25%, rgba(37, 50, 66, 1) 50%, rgba(37, 50, 66, 0.5) 75%, rgba(37, 50, 66, 0) 100%);
   z-index: 20;
   padding-top: 30px;
-  overflow-x: scroll!important;
+  overflow-x: scroll !important;
   overflow-y: hidden;
 }
 
@@ -234,14 +250,6 @@ img.leaflet-marker-icon.leaflet-zoom-animated.leaflet-interactive {
     background: #142432;
   }
 
-  .leaflet-popup-content-wrapper {
-    width: 80vw;
-    min-height: 550px;
-    height: 70vh;
-    margin-left: 20px;
-    margin-top: 200px;
-    pointer-events: none;
-  }
 
   .leaflet-popup-content main {
     padding: 0;
@@ -261,12 +269,12 @@ img.leaflet-marker-icon.leaflet-zoom-animated.leaflet-interactive {
 
   .leaflet-popup-content main header .img-container {
     width: 100%;
-    height: 200px!important;
+    height: 200px !important;
     /* border: solid 2px red; */
   }
 
   .leaflet-popup-content main header .containerIntro {
-    
+
     width: 100%;
     padding: 0;
   }
@@ -280,15 +288,16 @@ img.leaflet-marker-icon.leaflet-zoom-animated.leaflet-interactive {
 
   .leaflet-popup-content main footer {
     height: 36%;
-    overflow-x: scroll!important;
+    overflow-x: scroll !important;
   }
 
   .leaflet-popup-content main footer nav ul {
     margin-left: -30px;
-    pointer-events: auto!important;
+    pointer-events: auto !important;
   }
-  .leaflet-popup-content main footer nav ul li{
-    pointer-events: auto!important;
+
+  .leaflet-popup-content main footer nav ul li {
+    pointer-events: auto !important;
   }
 
 }
