--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -10,6 +10,10 @@
   transition: .6s cubic-bezier(.08, .82, .17, 1);
 } */
 
+header {
+  pointer-events: none;
+}
+
 .header {
   background: radial-gradient(59.36% 3107.35% at 49.08% -51.8%, #215CB1 0%, #1A4277 49.5%, #142473 100%)
     /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
@@ -23,6 +27,7 @@
   align-items: center;
   box-shadow: 0px 4px 60px 43px rgba(14, 22, 48, 0.2);
   z-index: 2;
+  pointer-events: none;
 }
 
 header .tourVirtual {
@@ -31,7 +36,7 @@ header .tourVirtual {
   z-index: 9999;
   text-transform: uppercase;
   left: 50%;
-  top: 5.5%;
+  top: 10%;
   transform: translate(-50%, -50%);
   letter-spacing: 6px;
   color: white;
@@ -99,10 +104,13 @@ header .tourVirtual {
   /* background-color: red; */
   width: 200px;
   width: 100%;
+  height: 80px;
+  pointer-events: none;
 }
 
 .btn-navbar img {
   width: 100%;
+  pointer-events: none;
 }
 
 /* Btn Avaliacao */
@@ -114,12 +122,14 @@ header .tourVirtual {
 }
 
 .iconArrowDown {
-  width: 22px !important;
+  width: 80px !important;
   position: absolute;
-  top: 50px;
+  top: 25px;
   transition: .4s;
   cursor: pointer;
   opacity: .7;
+  pointer-events: auto!important;
+  padding: 20px 30px;
 }
 
 /* Animacao */
@@ -146,4 +156,5 @@ header .tourVirtual {
   position: absolute;
   transform: rotate(180deg);
   transition: .4s;
+  pointer-events: auto!important;
 }
