--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,17 +1,15 @@
 /* HEADER */
-/* .headerMain {
-  height: 20%;
+.headerMain {
   background: linear-gradient(rgba(0, 0, 0, .7) 10%, rgba(4, 62, 162, 0) 100%);
   transition: .6s cubic-bezier(.08, .82, .17, 1);
+  z-index: 9999;
+  
 }
 
 .headerMainBGShow {
-  height: 100%;
+  height: 600px;
   transition: .6s cubic-bezier(.08, .82, .17, 1);
-} */
 
-header {
-  pointer-events: none;
 }
 
 .header {
