--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,7 +3,7 @@
   background: linear-gradient(rgba(0, 0, 0, .7) 10%, rgba(4, 62, 162, 0) 100%);
   transition: .6s cubic-bezier(.08, .82, .17, 1);
   z-index: 9999;
-  
+
 }
 
 .headerMainBGShow {
@@ -56,18 +56,42 @@ header .tourVirtual {
   padding: 0 2.5rem;
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 70%;
+  margin: 0 auto;
   position: relative;
   background: linear-gradient(90deg, rgba(4, 62, 162, 0) 0.86%, rgba(30, 30, 30, .2) 50%, rgba(4, 62, 162, 0) 100.22%);
   opacity: 0;
   visibility: hidden;
   transition: .5s;
+  background-color: red;
+
+}
+
+/* Btn Avaliacao */
+.btnAvaliacao {
+  width: 115px;
+  position: absolute;
+  right: 60px;
+  bottom: 55px;
+  pointer-events: auto;
+}
+
+.header .navbar li a {
+  pointer-events: auto;
 }
 
 .header .navbar li a {
   display: block;
-  padding: 1.5rem;
-  font-size: 1.5rem;
+  padding: 1rem .8rem;
+  font-size: 1.2rem;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: .3;
+}
+
+.header .navbar li a:active {
+  background-color: rgba(0, 0, 0, .2);
+  transition: .3;
 }
 
 /* Logos config */
@@ -111,24 +135,27 @@ header .tourVirtual {
   pointer-events: none;
 }
 
-/* Btn Avaliacao */
-.btnAvaliacao {
-  width: 115px;
-  position: absolute;
-  right: 60px;
-  bottom: 4px;
-  pointer-events: auto;
-}
-
 .iconArrowDown {
   width: 80px !important;
   position: absolute;
-  top: 25px;
+  top: 20px;
   transition: .4s;
   cursor: pointer;
   opacity: .7;
-  pointer-events: auto!important;
-  padding: 20px 30px;
+  pointer-events: auto !important;
+  padding: 30px 30px;
+  border-radius: 100%;
+}
+
+.iconArrowDown:active {
+  background-color: rgba(255, 255, 255, .7);
+}
+
+.iconArrowUp {
+  position: absolute;
+  transform: rotate(180deg);
+  transition: .4s;
+  pointer-events: auto !important;
 }
 
 /* Animacao */
@@ -148,12 +175,4 @@ header .tourVirtual {
   opacity: 1 !important;
   visibility: visible !important;
   transition: .5s;
-}
-
-.iconArrowUp {
-  width: 25px;
-  position: absolute;
-  transform: rotate(180deg);
-  transition: .4s;
-  pointer-events: auto!important;
 }
