--- a/src/components/MarkerIcons/pinpalcolaia.css
+++ b/src/components/MarkerIcons/pinpalcolaia.css
@@ -122,7 +122,7 @@ body {
   z-index: 20;
   padding-top: 30px;
   overflow-x: scroll !important;
-  overflow-y: hidden;
+  pointer-events: auto;
 }
 
 .leaflet-popup-content main footer nav {
