header navegavel iniciado utilizando switch case

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -34,16 +34,16 @@ header .tourVirtual {
   z-index: 9999;
   text-transform: uppercase;
   left: 50%;
-  top: 10%;
+  top: 11.5%;
   transform: translate(-50%, -50%);
   letter-spacing: 6px;
   color: white;
-  opacity: .3;
+  opacity: .5;
   transition: .6s cubic-bezier(.08, .82, .17, 1);
 }
 
 .tourVirtualPDelay {
-  top: 3% !important;
+  top: 4.5% !important;
   transition: .6s cubic-bezier(.08, .82, .17, 1);
 }
 
@@ -63,11 +63,14 @@ header .tourVirtual {
   opacity: 0;
   visibility: hidden;
   transition: .5s;
-  background-color: red;
+  /* background-color: red; */
   white-space: nowrap;
   overflow-x: scroll;
   pointer-events: auto;
   padding-left: 280px;
+  padding-top: 14px;
+  overflow-y: hidden;
+  
 }
 
 /* Btn Avaliacao */
@@ -79,9 +82,6 @@ header .tourVirtual {
   pointer-events: auto;
 }
 
-.header .navbar li a {
-  pointer-events: auto;
-}
 
 .header .navbar li a {
   display: block;
@@ -90,6 +90,7 @@ header .tourVirtual {
   cursor: pointer;
   border-radius: 6px;
   transition: .3;
+  pointer-events: auto;
 }
 
 .header .navbar li a:active {
