--- a/src/pages/Avaliacao/avaliacao.css
+++ b/src/pages/Avaliacao/avaliacao.css
@@ -1,13 +1,13 @@
 .avaliacao-container {
   height: auto;
-  max-height: 100vh;
   width: 100%;
   display: grid;
-  grid-template-rows: 1fr 3fr 100px;
+  grid-template-rows: 0.8fr 1.8fr 100px;
   color: #eee;
   background-color: #142432;
   text-align: center;
   position: relative;
+  min-height: 100vh;
 }
 
 .logoExpo {
@@ -48,8 +48,8 @@ header {
   width: 75px;
   position: absolute;
   right: 160px;
-  top: 60px;
-  opacity: .5;
+  top: 40px;
+  opacity: .7;
   cursor: pointer;
 }
 
@@ -78,7 +78,7 @@ section .cardsAvaliacao {
   border-radius: 15px;
 }
 
-footer { 
+footer {
   /* border: solid 3px orange; */
   width: 100%;
   display: flex;
@@ -87,7 +87,7 @@ footer {
 }
 
 .alertaVisual {
-  background-color: yellow;
+  background-color: #fff;
   opacity: .7;
   color: #000;
   margin: 0 3px;
@@ -96,4 +96,23 @@ footer {
   position: relative;
   border-radius: 0 0 8px 8px;
   top: -32px;
+}
+
+.containerAgredecimento {
+  height: 94%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: center;
+  padding: 60px;
+  font-size: 2.5rem;
+  font-family: 'Bitter', serif;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.containerAgredecimento img {
+  width: 25%;
+  margin-left: -30px;
 }
