--- a/src/components/MarkerIcons/pinrodeio.css
+++ b/src/components/MarkerIcons/pinrodeio.css
@@ -6,3 +6,20 @@
 #footerRodeio {
   background: linear-gradient(90deg, rgba(66, 50, 37, 0) 0%, rgba(66, 55, 37, 0.5) 25%, rgb(75, 52, 34) 50%, rgba(66, 50, 37, 0.5) 75%, rgba(66, 53, 37, 0) 100%);
 }
+
+
+#videoRodeip {
+  width: 600px;
+  height: 100%;
+  border-radius: 20px;
+  /* border: solid 3px red; */
+  box-shadow: 19px 29px 76px 18px rgba(30, 16, 7, 0.65);
+}
+
+.containerIntro {
+  margin-left: 80px;
+}
+
+.containerIntro img {
+  width: 200px;
+}
