--- a/src/components/MarkerIcons/pinrodeio.css
+++ b/src/components/MarkerIcons/pinrodeio.css
@@ -20,6 +20,10 @@
   margin-left: 80px;
 }
 
+.leaflet-popup-content main header .img-container {
+  margin-left: 20px;
+}
+
 .containerIntro img {
   width: 200px;
 }
