--- a/src/components/MarkerIcons/pinarenagame.css
+++ b/src/components/MarkerIcons/pinarenagame.css
@@ -6,3 +6,18 @@
 #footerArenaGame {
   background: linear-gradient(90deg, rgba(23, 52, 88, 0) 0%, rgba(22, 48, 80, 0.5) 25%, rgb(17, 31, 63) 50%, rgba(22, 34, 78, 0.5) 75%, rgba(24, 27, 75, 0) 100%);
 }
+
+#gameintro {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0;
+}
+
+#containerIntroo {
+  width: 60%;
+  padding: 0;
+  margin-left: 30px;
+}
