--- a/src/components/MarkerIcons/pinrodeio.css
+++ b/src/components/MarkerIcons/pinrodeio.css
@@ -14,6 +14,7 @@
   border-radius: 20px;
   /* border: solid 3px red; */
   box-shadow: 19px 29px 76px 18px rgba(30, 16, 7, 0.65);
+  margin-left: 50px;
 }
 
 .containerIntro {
@@ -25,5 +26,6 @@
 }
 
 .containerIntro img {
-  width: 200px;
+  width: 300px;
+  margin-left: 60px;
 }
