--- a/src/components/MarkerIcons/pinmariabonita.css
+++ b/src/components/MarkerIcons/pinmariabonita.css
@@ -6,3 +6,15 @@
 #footerMariaBonita {
   background: linear-gradient(90deg, rgba(66, 37, 37, 0) 0%, rgba(66, 37, 37, 0.5) 25%, rgb(75, 34, 34) 50%, rgba(66, 37, 37, 0.5) 75%, rgba(66, 37, 37, 0) 100%);
 }
+
+#img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+#img-container img {
+  width: 70%;
+}
